manage, delete, get all klara

--- a/blog-client-template/admin/create-post.html
+++ b/blog-client-template/admin/create-post.html
@@ -6,6 +6,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="js/create-post.js"></script>
+
+    <div id="container">
+        <h1>New Tweet</h1>
+
+        <form id="create-pun-form">
+            <label for="">Content</label>
+            <textarea name="content" id="content-textarea" cols="30" rows="10"></textarea>
+
+            <input type="submit" value="Create">
+            <a href="../index.html">&#x2190; back</a>
+        </form>
+    </div>
+    <script src="./js/create-post.js"></script>
 </body>
 </html>
